// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Card > should render all the compoents 1`] = `
<div>
  <div
    class="HvIsCardGridElement HvCard-root hv-1wtktsk"
  >
    <div
      class="HvCard-semanticContainer hv-emolmc"
    >
      <div
        class="HvCard-semanticBar hv-1eh5j27"
      />
      <div
        class="HvCard-icon hv-pzj2c4"
      />
    </div>
    <div
      class="MuiCardHeader-root HvCardHeader-root hv-pqwkee css-185gdzj-MuiCardHeader-root"
    >
      <div
        class="MuiCardHeader-content HvCardHeader-content hv-0 css-1qbkelo-MuiCardHeader-content"
      >
        <span
          class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title HvCardHeader-title hv-1fo94no css-1qvr50w-MuiTypography-root"
        >
          mockTitle
        </span>
        <span
          class="MuiTypography-root MuiTypography-body1 MuiCardHeader-subheader HvCardHeader-subheader hv-1fo94no css-nrdprl-MuiTypography-root"
        >
          mockSubtitle
        </span>
      </div>
    </div>
    <img
      alt="mockImg"
      class="MuiCardMedia-root HvCardMedia-root hv-8atqhb MuiCardMedia-media HvCardMedia-media hv-0 MuiCardMedia-img css-o69gx8-MuiCardMedia-root"
      role="img"
    />
    <div
      class="MuiCardContent-root HvCardContent-content hv-1ly90im css-46bh2p-MuiCardContent-root"
    >
      <label
        class="HvTypography-root HvTypography-label css-9vbp9s-getStyledComponent e1tnpalo0"
      >
        mockCardContent
      </label>
    </div>
  </div>
</div>
`;

exports[`Card > should render content 1`] = `
<div>
  <div
    class="HvIsCardGridElement HvCard-root hv-1wtktsk"
  >
    <div
      class="HvCard-semanticContainer hv-emolmc"
    >
      <div
        class="HvCard-semanticBar hv-1eh5j27"
      />
      <div
        class="HvCard-icon hv-pzj2c4"
      />
    </div>
    <div
      class="MuiCardContent-root HvCardContent-content hv-1ly90im css-46bh2p-MuiCardContent-root"
    >
      <label
        class="HvTypography-root HvTypography-label css-9vbp9s-getStyledComponent e1tnpalo0"
      >
        mockCardContent
      </label>
    </div>
  </div>
</div>
`;

exports[`Card > should render correctly 1`] = `
<div>
  <div
    class="HvIsCardGridElement HvCard-root hv-1wtktsk"
  >
    <div
      class="HvCard-semanticContainer hv-emolmc"
    >
      <div
        class="HvCard-semanticBar hv-1eh5j27"
      />
      <div
        class="HvCard-icon hv-pzj2c4"
      />
    </div>
  </div>
</div>
`;

exports[`Card > should render header 1`] = `
<div>
  <div
    class="HvIsCardGridElement HvCard-root hv-1wtktsk"
  >
    <div
      class="HvCard-semanticContainer hv-emolmc"
    >
      <div
        class="HvCard-semanticBar hv-1eh5j27"
      />
      <div
        class="HvCard-icon hv-pzj2c4"
      />
    </div>
    <div
      class="MuiCardHeader-root HvCardHeader-root hv-pqwkee css-185gdzj-MuiCardHeader-root"
    >
      <div
        class="MuiCardHeader-content HvCardHeader-content hv-0 css-1qbkelo-MuiCardHeader-content"
      >
        <span
          class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title HvCardHeader-title hv-1fo94no css-1qvr50w-MuiTypography-root"
        >
          mockTitle
        </span>
        <span
          class="MuiTypography-root MuiTypography-body1 MuiCardHeader-subheader HvCardHeader-subheader hv-1fo94no css-nrdprl-MuiTypography-root"
        >
          mockSubtitle
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Card > should render image 1`] = `
<div>
  <div
    class="HvIsCardGridElement HvCard-root hv-1wtktsk"
  >
    <div
      class="HvCard-semanticContainer hv-emolmc"
    >
      <div
        class="HvCard-semanticBar hv-1eh5j27"
      />
      <div
        class="HvCard-icon hv-pzj2c4"
      />
    </div>
    <img
      alt="mockImg"
      class="MuiCardMedia-root HvCardMedia-root hv-8atqhb MuiCardMedia-media HvCardMedia-media hv-0 MuiCardMedia-img css-o69gx8-MuiCardMedia-root"
      role="img"
    />
  </div>
</div>
`;
